--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -34,18 +34,22 @@
 .chat-header {
   height: 100px;
   padding: 0 40px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .chat-room {
   background-color: #FAFAFA;
   height: calc(100vh - 100px - 90px);
   padding: 46px 40px 0;
+  overflow: scroll;
 }
 
 .chat-form {
   background-color: #DDDDDD;
   height: 90px;
   padding: 20px 40px;
+  display: flex;
 }
 
 .user-name a {
@@ -69,4 +73,82 @@
 .room-name a {
   color: wheat;
   text-decoration: none;
+}
+
+.header-title {
+  color: #333;
+  font-size: 24px;
+  margin-top: 36px;
+}
+
+.chat-finish{
+  margin-top: 40px;
+}
+.chat-finish a {
+  color: darkred;
+  border: solid 1px darkred;
+  padding: 20px;
+  text-decoration: none;
+}
+
+.name_time {
+  display: flex;
+  margin-top: 10px;
+}
+
+.name {
+  color: #434A54;
+  font-size: 16px;
+}
+
+.time {
+  color: #999;
+  font-size: 12px;
+  margin-left: 10px;
+}
+
+.content-content {
+  margin-top: 10px;
+}
+.content {
+  font-size: 14px;
+  color: #434A54;
+  margin-bottom: 40px;
+}
+
+.form {
+ background-color: white;
+ width: 100%;
+ display: flex;
+}
+
+.message-form {
+  border: none;
+  height: 50px;
+  width: 100%;
+  padding-left: 10px;
+}
+
+.send {
+  font-size: 16px;
+  color: white;
+  background-color: #38aef0;
+  height: 50px;
+  padding: 0 20px;
+  margin-left: 15px;
+  border: none;
+}
+
+.form-image {
+  font-size: 12px;
+  background-color: lightblue;
+  color: white;
+  padding: 12px;
+  width: 60px;
+  margin: 5px 10px;
+  text-align: center;
+}
+
+.hidden {
+  display: none;
 }
