--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -52,13 +52,13 @@
   </div>                  
 </div>
 
-<div class="chat-form">
+<%= form_with model: [@room, @message], class: 'chat-form', local: true do |f| %>
   <div class="form">
-    <input placeholder="type a message" class="message-form">
+    <%= f.text_field :content, placeholder: 'type a message', class:'message-form' %>
     <label class="form-image">
       <span class="image-file">画像</span>
-      <input type="file" class="hidden">
+      <%= f.file_field :image, class: 'hidden' %>
     </label>  
   </div>  
-  <input type="submit" value="送信" class="send">
-</div>
+  <%= f.submit '送信', class: 'send' %>
+<% end %>
