--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,7 +1,7 @@
 <div class="chat-header">
   <div class="header-left">
     <div class="header-title">
-      hogehuga
+      <%= @room.name %>
     </div>  
   </div>
   <div class="header-right">
